# olheiro

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: update_readme.py
.github/templates/: README.md
.github/workflows/: Dockerfile  fii_ranking.yaml
core/: ranker.py  scraper.py  utils.py
